final UI update

--- a/dashboard.html
+++ b/dashboard.html
@@ -117,7 +117,7 @@
         <div class="d-flex justify-content-between align-items-center mb-4">
           <div class="d-flex align-items-center gap-3">
             <img src="images/Ellipse 2.png" alt="" style="width: 40px; height: 30px;" />
-            <span class="fw-semibold">Hi, <span id="username-display"></span></span>
+            <span class="fw-semibold" id="greeting-text"></span>
           </div>
           <div class="d-flex align-items-center gap-3 position-relative">
             <i id="notif-icon" class="bi bi-bell fs-4" style="cursor: pointer;"></i>
