--- a/health-record.html
+++ b/health-record.html
@@ -104,32 +104,45 @@
         <i class="bi bi-people"></i> Community
       </a>
     </div>
-
-    <!-- Main Content -->
-    <div class="main-wrapper">
+<div class="main-wrapper">
       <div class="main-content">
-        <div class="card mb-0">
-          <div class="card-body d-flex justify-content-between align-items-center">
-            <div class="d-flex align-items-center gap-3">
-              <img src="images/Ellipse 2.png" alt="" style="width: 40px; height: 30px;"/>
-              <span class="fw-semibold" id="greeting-text">Good Afternoon, Ada</span>
-            </div>
-            <div class="d-flex gap-2 align-items-center position-relative">
-              <i class="bi bi-bell-fill fs-4" id="notif-icon" style="cursor: pointer;"></i>
-              <div id="notif-dropdown" class="position-absolute bg-white border rounded p-2" style="top: 40px; right: 90px; display: none; z-index: 1000;">
-                <p class="mb-0">No new notifications</p>
+        <!-- Header (Topbar) -->
+        <div class="topbar d-flex justify-content-between align-items-center mb-4 position-relative">
+          <div class="d-flex align-items-center gap-3">
+            <img src="images/Ellipse 2.png" alt="User" style="width: 40px; height: 30px;" />
+            <span class="fw-semibold" id="greeting-text"></span>
+          </div>
+          <div class="d-flex align-items-center gap-3">
+            <div class="position-relative">
+              <i class="bi bi-bell fs-4" id="notif-icon" style="cursor: pointer;"></i>
+              <div
+                id="notif-dropdown"
+                class="position-absolute bg-white shadow rounded p-2"
+                style="top: 100%; right: 0; display: none; z-index: 999;"
+              >
+                <small class="text-muted">No new notifications</small>
               </div>
-
+            </div>
+            <div class="position-relative">
               <i class="bi bi-person-circle fs-4" id="profile-icon" style="cursor: pointer;"></i>
-              <div id="profile-dropdown" class="position-absolute bg-white border rounded p-2" style="top: 40px; right: 30px; display: none; z-index: 1000;">
-                <a href="#" class="dropdown-item"><i class="bi bi-gear me-2"></i> Settings</a>
-                <a href="#" class="dropdown-item"><i class="bi bi-box-arrow-right me-2"></i> Logout</a>
+              <div
+                id="profile-dropdown"
+                class="position-absolute bg-white shadow rounded p-2"
+                style="top: 100%; right: 0; display: none; z-index: 999;"
+              >
+                <!-- Added IDs to these links for JS functionality -->
+                <a href="settings.html" id="settingsLink" class="d-flex align-items-center text-dark text-decoration-none mb-2">
+                  <i class="bi bi-gear me-2"></i> Settings
+                </a>
+                <a href="#" id="logoutLink" class="d-flex align-items-center text-dark text-decoration-none">
+                  <i class="bi bi-box-arrow-right me-2"></i> Logout
+                </a>
               </div>
-
-              <button class="btn btn-primary btn-sm" id="addPetBtn">+Add a Pet</button>
             </div>
+            <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#addPetModal">+ Add a Pet</button>
           </div>
         </div>
+    
 
         <!-- Pet Basic Information -->
         <div class="card mb-0">
@@ -272,6 +285,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/health-record.js"></script>
+  <script src="js\health-record.js"></script>
 </body>
 </html>
