--- a/resources.html
+++ b/resources.html
@@ -167,7 +167,7 @@
         <div class="d-flex justify-content-between align-items-center flex-wrap mb-4">
           <div class="d-flex align-items-center gap-3">
             <img src="images/Ellipse 2.png" alt="" style="width: 40px; height: 30px;" />
-            <span class="fw-semibold">Good Afternoon, Ada</span>
+             <span class="fw-semibold" id="greeting-text"></span>
           </div>
           <div class="d-flex align-items-center gap-3 flex-wrap">
             <div class="input-group" style="width: 250px;">
