--- a/service-directory.html
+++ b/service-directory.html
@@ -264,7 +264,7 @@
     <div class="main-wrapper">
       <div class="main-content"> <div class="topbar"> <div class="d-flex align-items-center gap-3">
             <img src="images/Ellipse 2.png" alt="User profile" style="width: 40px; height: 30px;"/>
-            <span class="fw-semibold">Good Afternoon, Ada</span>
+            <span class="fw-semibold" id="greeting-text"></span>
           </div>
           <div class="d-flex align-items-center gap-3 mt-3 mt-md-0">
             <div class="input-group" style="width: 250px;">
