--- a/settings.html
+++ b/settings.html
@@ -95,7 +95,6 @@
                     <div class="d-flex align-items-center gap-3 position-relative">
                         <i id="notif-icon" class="bi bi-bell fs-4" style="cursor: pointer;"></i>
                         <i id="profile-icon" class="bi bi-person-circle fs-4" style="cursor: pointer;"></i>
-                        <!-- The '+ Add a Pet' button is specific to the dashboard and not included here -->
 
                         <!-- Notification Dropdown (consistent with other pages) -->
                         <div id="notif-dropdown" class="position-absolute bg-white border shadow-sm p-3"
@@ -110,10 +109,17 @@
                         <!-- Profile Dropdown (consistent with other pages) -->
                         <div id="profile-dropdown" class="position-absolute bg-white border shadow-sm p-3"
                             style="top: 40px; right: 50px; width: 150px; display: none; z-index: 10; border-radius: 10px;" >
-                            <p class="mb-2"><i class="bi bi-gear me-2"></i><a href="settings.html" class="text-decoration-none text-dark">Settings</a></p>
-                            <p class="mb-0"><i class="bi bi-box-arrow-right me-2"></i><a href="logout.html" class="text-decoration-none text-dark">Logout</a></p>
+                            <p class="mb-2"><i class="bi bi-gear me-2"></i><a id="settingsLink" href="settings.html" class="text-decoration-none text-dark">Settings</a></p>
+                            <p class="mb-0"><i class="bi bi-box-arrow-right me-2"></i><a id="logoutLink" href="logout.html" class="text-decoration-none text-dark">Logout</a></p>
                         </div>
                     </div>
+                </div>
+
+                <!-- Back to Dashboard Link -->
+                <div class="mb-3">
+                    <a href="dashboard.html" class="btn btn-outline-secondary btn-sm">
+                        <i class="bi bi-arrow-left me-2"></i>Back to Dashboard
+                    </a>
                 </div>
 
                 <!-- Settings Content -->
@@ -208,7 +214,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/common.js"></script> <!-- Common JavaScript for greeting, topbar icons, etc. -->
-    <!-- No page-specific JS file is immediately needed for basic settings display -->
+    <script src="js/settings.js"></script> <!-- Linking to the page-specific JS -->
 </body>
 </html>
