final UI update

--- a/signup.html
+++ b/signup.html
@@ -324,11 +324,10 @@
                         <label for="username" class="form-label">Username</label>
                         <input type="text" class="form-control" id="username" placeholder="Choose a username" required>
                     </div>
-                    <div class="mb-3">
-                        <label for="field" class="form-label">Role</label>
-                        <input type="text" class="form-control" id="field" placeholder="Enter your role" optional>
-                    </div>
-
+                  <div class="mb-3">
+                       <label for="field" class="form-label">Role</label>
+                      <input type="text" class="form-control" id="field" value="PET_OWNER" disabled>
+                   </div>
                     <div class="mb-3">
                         <label for="email" class="form-label">Email address</label>
                         <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
